# manim-2d-3d-generation-project

./: .env.example  Dockerfile  package.json  pyproject.toml  requirements.txt
app/: config.py  generator.py  ingestion.py  main.py  renderer.py  router.py
backend/: Dockerfile  pyproject.toml  requirements.txt  usage_example.py
backend/app/: __init__.py  config.py  generator.py  main.py  renderer.py  router.py  scheduler.py  schemas.py  supabase_client.py  utils.py
components/: JobStatus.tsx
